--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#skills">Tech Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#skills">Tech Skills</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -541,31 +541,31 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="img/portfolio/truck/1.jpg" alt="First slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/1.jpg" alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/2.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/2.jpg" alt="Second slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/3.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/3.jpg" alt="Third slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/4.jpg" alt="Fourth slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/4.jpg" alt="Fourth slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/5.jpg" alt="Fifth slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/5.jpg" alt="Fifth slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/6.jpg" alt="Sixth slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/6.jpg" alt="Sixth slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/7.jpg" alt="Seventh slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/7.jpg" alt="Seventh slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/8.jpg" alt="Eighth slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/8.jpg" alt="Eighth slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/truck/9.jpg" alt="Nineth slide">
+                        <img class="d-block w-100" src="img/portfolio/Truck/9.jpg" alt="Nineth slide">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
