--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                   <p class="item-intro text-muted">Airbnb for commercial real estate</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt=""> -->
                   <!-- carousel -->
-                  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                  <div id="carouselExampleThree" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="img/portfolio/RE/1.jpg" alt="First slide">
@@ -706,11 +706,11 @@
                         <img class="d-block w-100" src="img/portfolio/RE/7.jpg" alt="Seventh slide">
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleThree" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleThree" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -747,12 +747,11 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Conscious</h2>
-                  <a href="https://conscious2016.weebly.com/"> Conscious Website Mockup</a>
+                  <h2 class="text-uppercase"><a href="https://conscious2016.weebly.com/">Conscious</h2></a>
                   <p class="item-intro text-muted">Solution to Fast Fashion Waste</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt=""> -->
                   <!-- carousel -->
-                  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                  <div id="carouselExampleFour" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="img/portfolio/conscious/7.jpg" alt="First slide">
@@ -776,11 +775,11 @@
                         <img class="d-block w-100" src="img/portfolio/conscious/4.jpg" alt="Seventh slide">
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleFour" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleFour" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -822,7 +821,7 @@
                   <p class="item-intro text-muted">New Business Development Proposal</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt=""> -->
                   <!-- carousel -->
-                  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                  <div id="carouselExampleFive" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="img/portfolio/Amazon/1.jpg" alt="First slide">
@@ -843,11 +842,11 @@
                         <img class="d-block w-100" src="img/portfolio/Amazon/6.jpg" alt="Sixth slide">
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleFive" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleFive" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -888,7 +887,7 @@
                   <p class="item-intro text-muted">Architectural Design Projects</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt=""> -->
                   <!-- carousel -->
-                  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                  <div id="carouselExampleSix" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="img/portfolio/arch/8.jpg" alt="First slide">
@@ -939,11 +938,11 @@
                         <img class="d-block w-100" src="img/portfolio/arch/4.jpg" alt="Third slide">
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleSix" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleSix" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
