--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <img class="img-fluid" src="img/portfolio/01-thumbnail-1.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Truck&: Transportatoin Mgmt System</h4>
+              <h4>Truck&: Transportation Mgmt System</h4>
               <p class="text-muted">UX/UI Design, Web-Development</p>
             </div>
           </div>
@@ -156,6 +156,7 @@
             <div class="portfolio-caption">
               <h4>U-Place: Short-term CRE digital platform</h4>
               <p class="text-muted">Investment Proposal</p>
+              <p class="text-muted">Full presentation available upon request</p>              
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -184,6 +185,7 @@
             <div class="portfolio-caption">
               <h4>Amazon Personal Finance Market</h4>
               <p class="text-muted">Business Development</p>
+              <p class="text-muted">Full presentation available upon request</p>                            
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -198,6 +200,7 @@
             <div class="portfolio-caption">
               <h4>Architectural Rendering (3D)</h4>
               <p class="text-muted">Various Arch Projects</p>
+              <p class="text-muted">More renderings available upon request</p>                            
             </div>
           </div>
         </div>
@@ -609,7 +612,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Sueño Seguro <br>(Dream Insurance)</h2>
+                  <h2 class="text-uppercase">Sueño Seguro <br>(Insurance)</h2>
                   <p class="item-intro text-muted">Digital investment/insurance product for Mexicana</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt=""> -->
                   <!-- carousel -->
@@ -720,7 +723,7 @@
                   <ul class="list-inline">
                     <li><b>Date:</b> April 2017</li>
                     <li><b>Technical skills used:</b> Adobe Creative Suite (Photoshop, Illustrator, Adobe XD Beta), AutoCAD, Revit Architecture, Excel, Powerpoint, Google Cloud (Slide, Excel, Word)</li>
-                    <li><b>Contribution:</b> Concept Inception, UX Research,go-to-market strategy and financial analysis, market research, Internal process management, Powerpoint presentation, Graphic Design</li> 
+                    <li><b>Contribution:</b> Concept Inception, UX Research, go-to-market strategy and financial analysis, market research, Internal process management, Powerpoint presentation, Graphic Design</li> 
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -747,7 +750,8 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase"><a href="https://conscious2016.weebly.com/">Conscious</h2></a>
+                  <h2 class="text-uppercase">Conscious</h2>
+                  <a href="https://conscious2016.weebly.com/">Click for mockup</a>
                   <p class="item-intro text-muted">Solution to Fast Fashion Waste</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt=""> -->
                   <!-- carousel -->
