revised title and fixed description under conscious

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Hello, my name is Joy Kim</div>
-          <div class="intro-heading text-uppercase">UX/UI Designer<br>Web Developer<br> & MBA <br></div>
+          <div class="intro-heading text-uppercase">UX/UI Designer<br>Product Manager<br> & MBA <br></div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Projects</a>
         </div>
       </div>
@@ -793,7 +793,7 @@
                   <p><b>Ideation process:</b> Our Team's anchor purpose was to reduce the social and environmental impact of fast fashion through reuse and repurpose the waste. We applied design thinking framework and pivot multiple times to find the meaningful "How Might We" question. The industry research, interviews with stakeholders and end-users, and market research revealed that there is a lack of education on fashion waste and its environmental impact.</p>
                   <ul class="list-inline">
                     <li><b>Date:</b> December 2016</li>
-                    <li><b>Technical skills used:</b> Adobe Creative Suite (Photoshop, Illustrator, Adobe XD Beta), Weebly, AutoCAD, Revit Architecture, Excel, Powerpoint, Google Cloud (Slide, Excel, Word)</li>
+                    <li><b>Technical skills used:</b> Adobe Creative Suite (Photoshop, Illustrator, Adobe XD Beta), Weebly, Excel, Powerpoint, Google Cloud (Slide, Excel, Word)</li>
                     <li><b>Contribution:</b> Concept Inception, UX Research, Design Thinking, Agile Methodology, market research, competitive analysis, Internal process management, Powerpoint presentation, Graphic Design</li> 
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
