--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Hello, my name is Joy Kim</div>
-          <div class="intro-heading text-uppercase">UX/UI Designer<br>Product Manager<br> & MBA <br></div>
+          <div class="intro-heading text-uppercase">Digital Product/Project Manager<br> & MBA <br></div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Projects</a>
         </div>
       </div>
