--- a/index.html
+++ b/index.html
@@ -183,6 +183,20 @@
               <img class="img-fluid" src="img/portfolio/05-thumbnail-1.jpg" alt="">
             </a>
             <div class="portfolio-caption">
+              <h4>Meal-Kit Service Company</h4>
+              <p class="text-muted">Product Requirement Document & PPT</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/07-thumbnail-1.png" alt="">
+            </a>
+            <div class="portfolio-caption">
               <h4>Amazon Personal Finance Market</h4>
               <p class="text-muted">Business Development</p>
               <p class="text-muted">Full presentation available upon request</p>                            
@@ -807,6 +821,97 @@
       </div>
     </div>
 
+  <!-- Modal 7 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <h2 class="text-uppercase">Meal-Kit Company <br>(UX review)</h2>
+                <p class="item-intro text-muted">Chef-curated meal-kit delivery service</p>
+                <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt=""> -->
+                <!-- carousel -->
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="img/portfolio/UX/1.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/3.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/4.jpg" alt="Fourth slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/5.jpg" alt="Fifth slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/6.jpg" alt="Sixth slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/7.jpg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/8.jpg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/9.jpg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/10.jpg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/11.jpg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/12.jpg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/13.jpg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/portfolio/UX/14.jpg" alt="Seventh slide">
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+                <!-- carousel end -->
+                <p class="text-muted">Full PRD and presentation available upon request</p> 
+                <p>The objective of this project was to enhance the user experience of the first-time users of the website. With two-day user research, I've identified 3 pain points of the users and suggested the changes: 1) Reduce the number of access point on the home page to help the first-time users to make a quick decision on their first order; 2) Present the menu options on the "All Meals" section since the user research shows that the first-time users are more ready to explore the menu on "All Meals" page; 3) Instead of showing the "sign-up" page after answering 5 personalized questions, show the recommendation menu then include the sign-up option at the checkout page.</p>
+                <ul class="list-inline">
+                  <li><b>Date:</b> June 2018</li>
+                  <li><b>Technical skills used:</b> Adobe Creative Suite (Photoshop, Illustrator, Adobe XD Beta), Excel, Powerpoint, Google Cloud (Slide, Excel, Word)</li>
+                  <li><b>Contribution:</b> Concept Inception, UX Research, identifying KPI's, data analysis,UX Design, Powerpoint presentation, Graphic Design</li> 
+                </ul>
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fa fa-times"></i>
+                  Close Project</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> 
+   
     <!-- Modal 5 -->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
