--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail-1.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/07-thumbnail-1.jpg" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Meal-Kit Service Company</h4>
@@ -194,7 +194,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/07-thumbnail-1.png" alt="">
+              <img class="img-fluid" src="img/portfolio/05-thumbnail-1.png" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Amazon Personal Finance Market</h4>
@@ -894,7 +894,7 @@
                   </a>
                 </div>
                 <!-- carousel end -->
-                <p class="text-muted">Full PRD and presentation available upon request</p> 
+                <p class="text-muted"><b>Full PRD and presentation available upon request</b></p> 
                 <p>The objective of this project was to enhance the user experience of the first-time users of the website. With two-day user research, I've identified 3 pain points of the users and suggested the changes: 1) Reduce the number of access point on the home page to help the first-time users to make a quick decision on their first order; 2) Present the menu options on the "All Meals" section since the user research shows that the first-time users are more ready to explore the menu on "All Meals" page; 3) Instead of showing the "sign-up" page after answering 5 personalized questions, show the recommendation menu then include the sign-up option at the checkout page.</p>
                 <ul class="list-inline">
                   <li><b>Date:</b> June 2018</li>
