--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                 <p class="item-intro text-muted">Chef-curated meal-kit delivery service</p>
                 <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt=""> -->
                 <!-- carousel -->
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleSeven" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <img class="d-block w-100" src="img/portfolio/UX/1.jpg" alt="First slide">
