--- a/index.html
+++ b/index.html
@@ -1086,5 +1086,6 @@
     <script src="js/agency.min.js"></script>
 
   </body>
+<script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0077/9281.js" async="async"></script>
 
 </html>
